--- a/src/app/demo-form/demo-form.component.html
+++ b/src/app/demo-form/demo-form.component.html
@@ -1,11 +1,13 @@
 <div class="wrapper">
-<h3>Demo Form</h3>
+<h3>Demo For</h3>
 <h4>Saple sub titile</h4>
-<h5>Saple sub titile</h5>
-<form>
 
-</form>
-
+<div class="errorWrapper" *ngIf="error"> invalid user name </div>
+    <div class="formWrapper">
+            <input name="username" [(ngModel)]="username" type="text" />
+            <input name="password" [(ngModel)]="password" type="password" />
+            <button (click)="login()" class="loginBtn">Login</button>
+    </div>
 </div>
 
 
